# container-what

./: .travis.yml  Cargo.toml  README.md
src/: common.rs  lib.rs  main.rs
src/container/: detector.rs  mod.rs
tests/rkt/proc/1/: mountinfo  mounts  mountstats
